--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node scripts/start-next.js",
     "lint": "eslint",
     "db:init": "ts-node lib/db/init.ts",
     "type-check": "tsc --noEmit"
